# blackjack

./: CMakeLists.txt  README.md  notes.org
src/: CMakeLists.txt  cards.c  cards.h  deck.c  deck.h  game.c  game.h  hand.c  hand.h  player-actions.c  player-actions.h  useful.c  useful.h
tests/: CMakeLists.txt  test-cards.c  test-deck.c  test-hand.c
